# tongfuli

./: .dockerignore  .editorconfig  .gitignore  AGENTS.md  CODEOWNERS  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
contracts/: admin-api.md  events.md  ingestion-format.md  (+1 more)
services/ai-orchestrator/: .dockerignore  Dockerfile  README.md  pyproject.toml
services/ai-orchestrator/app/: __init__.py  main.py
services/ai-orchestrator/app/api/: __init__.py  conversation.py  health.py
services/ai-orchestrator/app/evals/: __init__.py  scorer.py
services/ai-orchestrator/app/gateway/: __init__.py  service.py
services/ai-orchestrator/app/orchestration/: __init__.py  service.py
services/ai-orchestrator/app/postcheck/: __init__.py  service.py
services/ai-orchestrator/app/retrieval/: __init__.py  service.py
services/ai-orchestrator/evals/: foundation_cases.json
services/ai-orchestrator/scripts/: run_eval.py
services/ai-orchestrator/tests/: test_conversation_api.py  test_eval_runner.py
services/knowledge-pipeline/: README.md  pyproject.toml
services/knowledge-pipeline/app/: __init__.py  contracts.py  main.py
services/knowledge-pipeline/app/api/: __init__.py  health.py  video_sources.py
services/knowledge-pipeline/app/extraction/: __init__.py  service.py
services/knowledge-pipeline/app/indexing/: __init__.py  service.py
services/knowledge-pipeline/app/ingestion/: __init__.py  service.py
services/knowledge-pipeline/app/pipeline/: service.py
services/knowledge-pipeline/app/review/: __init__.py  service.py
services/knowledge-pipeline/app/video_sources/: __init__.py  models.py  service.py
services/knowledge-pipeline/app/workflows/: __init__.py  service.py
services/knowledge-pipeline/tests/: test_contracts.py  test_health.py  test_pipeline_service.py  test_video_api.py  test_video_ingestion.py  test_video_publish_flow.py  test_workflow_service.py
services/knowledge-pipeline/tests/contracts/events/: knowledge.reviewed.json  source.ingested.json
(+174 files in other folders)
