[project]
name = "ai-orchestrator"
version = "0.1.0"
description = "Tongfuli AI orchestration service"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.111.0",
  "pydantic>=2.8.0",
  "uvicorn>=0.30.0"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.0",
  "pytest>=8.2.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = ["."]
